separate notify config for failed login / blocked IP

--- a/de-DE.plg_system_bfstop.sys.ini
+++ b/de-DE.plg_system_bfstop.sys.ini
@@ -5,18 +5,24 @@ EMAILSOURCEDESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden s
 SELECTEDUSERS="Gewählter Benutzer"
 CUSTOMEMAILADDRESS="Benutzerdefinierte Email-Adresse"
 SELECTUSERLABEL="Benutzer wählen"
-SELECTUSERDESC="Den Benutzer auswählen, an dessen Email-Adresse die Berichte über fehlgeschlagene Login-Versuche gesendet werden sollen."
+SELECTUSERDESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
 ENTEREMAILLABEL="Email-Adresse"
-ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Berichte über fehlgeschlagene Login-Versuche gesendet werden sollen."
-NOTIFYSOURCELABEL="Quelle"
-NOTIFYSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen senden soll."
-NOTIFYNUMBERLABEL="Anzahl"
-NOTIFYNUMBERDESC="Wie oft im angegebenen Intervall (siehe Einstellung 'Intervall') eine Benachrichtigung gesendet werden soll."
-NOTIFYINTERVALLABEL="Intervall"
-NOTIFYINTERVALDESC="In welchem Intervall (in Stunden) maximal die angegebene Anzahl Benachrichtigungen (siehe Einstellung 'Anzahl') gesendet werden soll"
+ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
+NOTIFYFAILEDSOURCELABEL="Fehlgeschlagen-Quelle"
+NOTIFYFAILEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über fehlgeschlagene Login-Versuche senden soll."
+NOTIFYFAILEDNUMBERLABEL="Fehlgeschlagen Anzahl"
+NOTIFYFAILEDNUMBERDESC="Wie oft im angegebenen Intervall (siehe Einstellung 'Fehlgeschlagen-Intervall') eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
+NOTIFYFAILEDINTERVALLABEL="Fehlgeschlagen Intervall"
+NOTIFYFAILEDINTERVALDESC="In welchem Intervall (in Stunden) maximal die angegebene Anzahl Benachrichtigungen (siehe Einstellung 'Fehlgeschlagen Anzahl') über fehlgeschlagene Login-Versuche gesendet werden soll"
+NOTIFYBLOCKEDSOURCELABEL="Blockiert-Quelle"
+NOTIFYBLOCKEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über blockierte IP-Adressen senden soll."
+NOTIFYBLOCKEDNUMBERLABEL="Blockiert Anzahl"
+NOTIFYBLOCKEDNUMBERDESC="Wie oft im angegebenen Intervall (siehe Einstellung 'Blockiert-Intervall') eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
+NOTIFYBLOCKEDINTERVALLABEL="Blockiert Intervall"
+NOTIFYBLOCKEDINTERVALDESC="In welchem Intervall (in Stunden) maximal die angegebene Anzahl Benachrichtigungen (siehe Einstellung 'Blockiert Anzahl') blockierte IP-Adressen gesendet werden soll"
 DELAYDURATIONLABEL="Verzögerung"
 DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
-NOTIFY_NONE="Niemals"
+NOTIFY_NEVER="Keine Benachrichtigung"
 NOTIFY_FRONTEND="Nur für Frontend"
 NOTIFY_BACKEND="Nur für Backend"
 NOTIFY_BOTH="Immer"
