--- a/en-GB.plg_system_bfstop.sys.ini
+++ b/en-GB.plg_system_bfstop.sys.ini
@@ -1,22 +1,28 @@
 PLG_BFSTOP_DESC="<h2>Brute Force Stop (bfstop)</h2><p>This plug-in collects a log about failed login attempts in your Joomla front- &amp; backend and sends configurable email notification to a configurable email address or the Super Administrator(s) you select in the plug-in configuration. This email contains username, password, ip address, time stamp, error and the origin of the error (frontend or backend).<br /><strong>Don't forget to publish the plugin after installing!</strong><br />Please show your support in our work by rating and/or commenting on this extension at the official Joomla! Extensions website. <br/><strong>Brute Force Stop(bfstop)</strong> is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> plugin, released under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>."
 PLG_BFSTOP_NAME="Brute Force Stop (bfstop)"
 EMAILSOURCELABEL="Select Email Source"
-EMAILSOURCEDESC="Please choose how the email address to send notifications to should be determined"
+EMAILSOURCEDESC="Choose where the email address to send notifications to should come from"
 SELECTEDUSERS="Selected User"
 CUSTOMEMAILADDRESS="Custom Email Address"
 SELECTUSERLABEL="Select a User"
-SELECTEDUSERSDESC="Select the User(s) you would like to have the Failed Login reports to be Sent."
+SELECTUSERSDESC="Select the user you would like to have notifications to be sent."
 ENTEREMAILLABEL="Email Address"
-ENTEREMAILDESC="Enter the Email Address where you would like to have the Failed Login reports to be Sent."
-NOTIFYSOURCELABEL="Source"
-NOTIFYSOURCEDESC="Select for which event sources you want the plugin to notify for."
-NOTIFYNUMBERLABEL="Notify count"
-NOTIFYNUMBERDESC="How often to notify of a failed login in the given interval (see Interval setting)"
-NOTIFYINTERVALLABEL="Notify interval"
-NOTIFYINTERVALDESC="In which time (in hours) to notify (a maximum of Notify count times)"
+ENTEREMAILDESC="Enter the Email Address where you would like to have notifications to be sent."
+NOTIFYFAILEDSOURCELABEL="Failed Source"
+NOTIFYFAILEDSOURCEDESC="Select for which sources you'd like to be notified about failed logins"
+NOTIFYFAILEDNUMBERLABEL="Failed Count"
+NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login in the given interval (see Failed Interval setting)"
+NOTIFYFAILEDINTERVALLABEL="Failed interval"
+NOTIFYFAILEDINTERVALDESC="In which time (in hours) to notify (a maximum of Failed Count times) about a failed login"
+NOTIFYBLOCKEDSOURCELABEL="Blocked Source"
+NOTIFYBLOCKEDSOURCEDESC="Select for which sources you'd like to be notified about blocked IPs"
+NOTIFYBLOCKEDNUMBERLABEL="Blocked Count"
+NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP in the given interval (see Blocked Interval setting)"
+NOTIFYBLOCKEDINTERVALLABEL="Blocked Interval"
+NOTIFYBLOCKEDINTERVALDESC="In which time (in hours) to notify (a maximum of Blocked Count times) about a blocked IP"
 DELAYDURATIONLABEL="Delay"
 DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
-NOTIFY_NONE="Never"
+NOTIFY_NEVER="Never notify"
 NOTIFY_FRONTEND="Only Frontend"
 NOTIFY_BACKEND="Only Backend"
 NOTIFY_BOTH="Both"
@@ -24,4 +30,3 @@ BLOCKNUMBERLABEL="Block threshold"
 BLOCKNUMBERDESC="How often a login can be tried in the given interval (see block interval) until the IP will be blocked"
 BLOCKINTERVALLABEL="Block interval"
 BLOCKINTERVALDESC="What interval (in hours) to consider for blocking an IP address (note that this blocking is permanent at the moment)"
-
