Language corrections, small fix in php (superfluous . removed)

--- a/en-GB.plg_system_bfstop.sys.ini
+++ b/en-GB.plg_system_bfstop.sys.ini
@@ -1,5 +1,7 @@
-PLG_BFSTOP_DESC="<h2>Brute Force Stop (bfstop)</h2><p>This plug-in collects a log about failed login attempts in your Joomla front- &amp; backend and sends configurable email notification to a configurable email address or the Super Administrator(s) you select in the plug-in configuration. This email contains username, password, ip address, time stamp, error and the origin of the error (frontend or backend).<br /><strong>Don't forget to publish the plugin after installing!</strong><br />Please show your support in our work by rating and/or commenting on this extension at the official Joomla! Extensions website. <br/><strong>Brute Force Stop(bfstop)</strong> is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> plugin, released under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>."
 PLG_BFSTOP_NAME="Brute Force Stop (bfstop)"
+PLG_BFSTOP_DESC="<h2>Brute Force Stop (bfstop)</h2><div>This plugin provides means to avert Brute-Force-Attacks on your Joomla-Installation. For this purpose, the plugin stores information on failed login attempts, so that when reaching a configurable number of such failed login attempts the attacker's IP address can be blocked. Furthermore, you can configure notifications about failed logins and blocked IP addresses, as well as a variable delay for a failed login attempt.</div><br /><div><em>Don't forget to publish the extension after installation!</em><br /><br /><em>Brute Force Stop (bfstop)</em> is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+ENABLEBLOCKLABEL="Enable Blocking"
+ENABLEBLOCKDESC="Whether an IP should be blocked after the given number of failed login attempts"
 EMAILSOURCELABEL="Select Email Source"
 EMAILSOURCEDESC="Choose where the email address to send notifications to should come from"
 SELECTEDUSERS="Selected User"
@@ -8,6 +10,7 @@ SELECTUSERLABEL="Select a User"
 SELECTUSERSDESC="Select the user you would like to have notifications to be sent."
 ENTEREMAILLABEL="Email Address"
 ENTEREMAILDESC="Enter the Email Address where you would like to have notifications to be sent."
+COM_PLUGINS_notify_FIELDSET_LABEL="Notifications"
 NOTIFYFAILEDSOURCELABEL="Failed Source"
 NOTIFYFAILEDSOURCEDESC="Select for which sources you'd like to be notified about failed logins"
 NOTIFYFAILEDNUMBERLABEL="Failed Count"
@@ -30,3 +33,5 @@ BLOCKNUMBERLABEL="Block threshold"
 BLOCKNUMBERDESC="How often a login can be tried in the given interval (see block interval) until the IP will be blocked"
 BLOCKINTERVALLABEL="Block interval"
 BLOCKINTERVALDESC="What interval (in hours) to consider for blocking an IP address (note that this blocking is permanent at the moment)"
+ENABLED=enabled
+DISABLED=disabled
