--- a/de-DE.plg_system_bfstop.sys.ini
+++ b/de-DE.plg_system_bfstop.sys.ini
@@ -1,5 +1,7 @@
 PLG_BFSTOP_NAME="Brute Force Stop (bfstop)"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop (bfstop)</h2><p>Dieses Plugin erstellt ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend und sendet konfigurierbare Benachrichtigungen an eine angegebene Adresse oder die mit einem Super Administrator verknüpfte Adresse. Die Benachrichtigung enthält alle Daten des Versuchs (Benutzername, Passwort, IP-Adresse, Zeitpunkt, Fehlermeldung und Ort).<br /><strong>Nicht vergessen, das Plugin nach der Installation zu veröffentlichen!</strong><br />Bitte zeigen Sie Ihre Unterstützung indem sie das Plugin im offiziellen Joomla! Extensions Repository bewerten!<br/><b>Brute Force Stop (bfstop)</b> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>."
+PLG_BFSTOP_DESC="<h2>Brute Force Stop (bfstop)</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation freizugeben!</em><br /><br /><em>Brute Force Stop (bfstop)</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+ENABLEBLOCKLABEL="Blockierung"
+ENABLEBLOCKDESC="Bestimmt ob IP-Adressen nach der angegebenen Anzahl von Login-Versuchen blockiert werden sollen"
 EMAILSOURCELABEL="Email-Adress-Quelle"
 EMAILSOURCEDESC="Bitte wählen Sie wie die Ziel-Email-Adresse ermittelt werden soll"
 SELECTEDUSERS="Gewählter Benutzer"
@@ -30,4 +32,6 @@ BLOCKNUMBERLABEL="Sperrschwelle"
 BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus (im konfigurierbaren Intervall) versucht werden kann bevor diese IP-Adresse gesperrt wird."
 BLOCKINTERVALLABEL="Sperrintervall"
 BLOCKINTERVALDESC="Intervall (in Stunden) für die fehlgeschlagene Login-Versuche von einer IP-Adresse aus berücksichtigt werden für die Sperre (Hinweis: die Sperre ist im Moment permanent)"
-
+COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Benachrichtigungen"
+ENABLED=aktiviert
+DISABLED=deaktiviert
