Block&Failed notification seperately configurable, simplified notification options

--- a/de-DE.plg_system_bfstop.sys.ini
+++ b/de-DE.plg_system_bfstop.sys.ini
@@ -12,16 +12,12 @@ ENTEREMAILLABEL="Email-Adresse"
 ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
 NOTIFYFAILEDSOURCELABEL="Fehlgeschlagen-Quelle"
 NOTIFYFAILEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über fehlgeschlagene Login-Versuche senden soll."
-NOTIFYFAILEDNUMBERLABEL="Fehlgeschlagen Anzahl"
-NOTIFYFAILEDNUMBERDESC="Wie oft im angegebenen Intervall (siehe Einstellung 'Fehlgeschlagen-Intervall') eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
-NOTIFYFAILEDINTERVALLABEL="Fehlgeschlagen Intervall"
-NOTIFYFAILEDINTERVALDESC="In welchem Intervall (in Stunden) maximal die angegebene Anzahl Benachrichtigungen (siehe Einstellung 'Fehlgeschlagen Anzahl') über fehlgeschlagene Login-Versuche gesendet werden soll"
+NOTIFYFAILEDNUMBERLABEL="Max. Fehlgeschlagen-Nachrichten"
+NOTIFYFAILEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
 NOTIFYBLOCKEDSOURCELABEL="Blockiert-Quelle"
 NOTIFYBLOCKEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über blockierte IP-Adressen senden soll."
-NOTIFYBLOCKEDNUMBERLABEL="Blockiert Anzahl"
-NOTIFYBLOCKEDNUMBERDESC="Wie oft im angegebenen Intervall (siehe Einstellung 'Blockiert-Intervall') eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
-NOTIFYBLOCKEDINTERVALLABEL="Blockiert Intervall"
-NOTIFYBLOCKEDINTERVALDESC="In welchem Intervall (in Stunden) maximal die angegebene Anzahl Benachrichtigungen (siehe Einstellung 'Blockiert Anzahl') blockierte IP-Adressen gesendet werden soll"
+NOTIFYBLOCKEDNUMBERLABEL="Max. Blockiert-Nachrichten"
+NOTIFYBLOCKEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
 DELAYDURATIONLABEL="Verzögerung"
 DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
 NOTIFY_NEVER="Keine Benachrichtigung"
@@ -33,5 +29,6 @@ BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus (im konfigurierb
 BLOCKINTERVALLABEL="Sperrintervall"
 BLOCKINTERVALDESC="Intervall (in Stunden) für die fehlgeschlagene Login-Versuche von einer IP-Adresse aus berücksichtigt werden für die Sperre (Hinweis: die Sperre ist im Moment permanent)"
 COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Benachrichtigungen"
-ENABLED=aktiviert
-DISABLED=deaktiviert
+ENABLED="aktiviert"
+DISABLED="deaktiviert"
+UNLIMITED="unbegrenzt"
