--- a/en-GB.plg_system_bfstop.sys.ini
+++ b/en-GB.plg_system_bfstop.sys.ini
@@ -13,16 +13,12 @@ ENTEREMAILDESC="Enter the Email Address where you would like to have notificatio
 COM_PLUGINS_notify_FIELDSET_LABEL="Notifications"
 NOTIFYFAILEDSOURCELABEL="Failed Source"
 NOTIFYFAILEDSOURCEDESC="Select for which sources you'd like to be notified about failed logins"
-NOTIFYFAILEDNUMBERLABEL="Failed Count"
-NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login in the given interval (see Failed Interval setting)"
-NOTIFYFAILEDINTERVALLABEL="Failed interval"
-NOTIFYFAILEDINTERVALDESC="In which time (in hours) to notify (a maximum of Failed Count times) about a failed login"
+NOTIFYFAILEDNUMBERLABEL="Max. # of failed msgs per day"
+NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login during one day"
 NOTIFYBLOCKEDSOURCELABEL="Blocked Source"
 NOTIFYBLOCKEDSOURCEDESC="Select for which sources you'd like to be notified about blocked IPs"
-NOTIFYBLOCKEDNUMBERLABEL="Blocked Count"
-NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP in the given interval (see Blocked Interval setting)"
-NOTIFYBLOCKEDINTERVALLABEL="Blocked Interval"
-NOTIFYBLOCKEDINTERVALDESC="In which time (in hours) to notify (a maximum of Blocked Count times) about a blocked IP"
+NOTIFYBLOCKEDNUMBERLABEL="Max. # of blocked msgs per day"
+NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP during one day"
 DELAYDURATIONLABEL="Delay"
 DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
 NOTIFY_NEVER="Never notify"
@@ -33,5 +29,6 @@ BLOCKNUMBERLABEL="Block threshold"
 BLOCKNUMBERDESC="How often a login can be tried in the given interval (see block interval) until the IP will be blocked"
 BLOCKINTERVALLABEL="Block interval"
 BLOCKINTERVALDESC="What interval (in hours) to consider for blocking an IP address (note that this blocking is permanent at the moment)"
-ENABLED=enabled
-DISABLED=disabled
+ENABLED="enabled"
+DISABLED="disabled"
+UNLIMITED="unlimited"
