Sends list of failed logins for blocked notification

--- a/en-GB.plg_system_bfstop.ini
+++ b/en-GB.plg_system_bfstop.ini
@@ -5,5 +5,5 @@ IPADDRESS="IP-Address"
 ERROR="Error"
 DATETIME="Date and time"
 ORIGIN="Origin"
-BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %s because there were too many login attempts in a short time. Last try: %s"
+BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %s because there were too many login attempts in a short time. These are the attempts:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="Blocked IP Address %s"
