Introduces IP based blocking, unifies logging, introduces DB error checking

--- a/de-DE.plg_system_bfstop.ini
+++ b/de-DE.plg_system_bfstop.ini
@@ -7,3 +7,4 @@ DATETIME="Zeitpunkt"
 ORIGIN="Quelle"
 BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %s wurde wegen zu vieler Login-Versuche gesperrt! Die Login-Versuche:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="IP-Adresse %s gesperrt"
+BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde gesperrt."
