--- a/de-DE.plg_system_bfstop.sys.ini
+++ b/de-DE.plg_system_bfstop.sys.ini
@@ -32,3 +32,5 @@ COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Benachrichtigungen"
 ENABLED="aktiviert"
 DISABLED="deaktiviert"
 UNLIMITED="unbegrenzt"
+BLOCKEDMESSAGELABEL="Sperrnachricht"
+BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde."
