--- a/en-GB.plg_system_bfstop.sys.ini
+++ b/en-GB.plg_system_bfstop.sys.ini
@@ -32,3 +32,5 @@ BLOCKINTERVALDESC="What interval (in hours) to consider for blocking an IP addre
 ENABLED="enabled"
 DISABLED="disabled"
 UNLIMITED="unlimited"
+BLOCKEDMESSAGELABEL="Blocked message"
+BLOCKEDMESSAGEDESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts"
