--- a/en-GB.plg_system_bfstop.ini
+++ b/en-GB.plg_system_bfstop.ini
@@ -7,3 +7,4 @@ DATETIME="Date and time"
 ORIGIN="Origin"
 BLOCKED_IP_ADDRESS_BODY="Blocked IP Addresss %s because there were too many login attempts in a short time. These are the attempts:\n\n%s"
 BLOCKED_IP_ADDRESS_SUBJECT="Blocked IP Address %s"
+BLOCKED_IP_MESSAGE="Your IP address has been blocked."
