Simplifies notification (no more source), better formatting of failed login notification

--- a/de-DE.plg_system_bfstop.sys.ini
+++ b/de-DE.plg_system_bfstop.sys.ini
@@ -10,20 +10,12 @@ SELECTUSERLABEL="Benutzer wählen"
 SELECTUSERDESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
 ENTEREMAILLABEL="Email-Adresse"
 ENTEREMAILDESC="Die Email-Adresse eingeben, an die die Benachrichtigungen gesendet werden sollen."
-NOTIFYFAILEDSOURCELABEL="Fehlgeschlagen-Quelle"
-NOTIFYFAILEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über fehlgeschlagene Login-Versuche senden soll."
 NOTIFYFAILEDNUMBERLABEL="Max. Fehlgeschlagen-Nachrichten"
 NOTIFYFAILEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
-NOTIFYBLOCKEDSOURCELABEL="Blockiert-Quelle"
-NOTIFYBLOCKEDSOURCEDESC="Wählen Sie für welche Quelle(n) das Plugin Benachrichtigungen über blockierte IP-Adressen senden soll."
 NOTIFYBLOCKEDNUMBERLABEL="Max. Blockiert-Nachrichten"
 NOTIFYBLOCKEDNUMBERDESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
 DELAYDURATIONLABEL="Verzögerung"
 DELAYDURATIONDESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
-NOTIFY_NEVER="Keine Benachrichtigung"
-NOTIFY_FRONTEND="Nur für Frontend"
-NOTIFY_BACKEND="Nur für Backend"
-NOTIFY_BOTH="Immer"
 BLOCKNUMBERLABEL="Sperrschwelle"
 BLOCKNUMBERDESC="Wie oft ein Login von derselben IP-Adresse aus (im konfigurierbaren Intervall) versucht werden kann bevor diese IP-Adresse gesperrt wird."
 BLOCKINTERVALLABEL="Sperrintervall"
@@ -31,6 +23,7 @@ BLOCKINTERVALDESC="Intervall (in Stunden) für die fehlgeschlagene Login-Versuch
 COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Benachrichtigungen"
 ENABLED="aktiviert"
 DISABLED="deaktiviert"
-UNLIMITED="unbegrenzt"
+NOTIFY_UNLIMITED="unbegrenzt"
+NOTIFY_NEVER="niemals"
 BLOCKEDMESSAGELABEL="Sperrnachricht"
 BLOCKEDMESSAGEDESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde."
