--- a/en-GB.plg_system_bfstop.sys.ini
+++ b/en-GB.plg_system_bfstop.sys.ini
@@ -10,27 +10,20 @@ SELECTUSERLABEL="Select a User"
 SELECTUSERSDESC="Select the user you would like to have notifications to be sent."
 ENTEREMAILLABEL="Email Address"
 ENTEREMAILDESC="Enter the Email Address where you would like to have notifications to be sent."
-COM_PLUGINS_notify_FIELDSET_LABEL="Notifications"
-NOTIFYFAILEDSOURCELABEL="Failed Source"
-NOTIFYFAILEDSOURCEDESC="Select for which sources you'd like to be notified about failed logins"
+COM_PLUGINS_NOTIFY_FIELDSET_LABEL="Notifications"
 NOTIFYFAILEDNUMBERLABEL="Max. # of failed msgs per day"
 NOTIFYFAILEDNUMBERDESC="How often to notify about a failed login during one day"
-NOTIFYBLOCKEDSOURCELABEL="Blocked Source"
-NOTIFYBLOCKEDSOURCEDESC="Select for which sources you'd like to be notified about blocked IPs"
 NOTIFYBLOCKEDNUMBERLABEL="Max. # of blocked msgs per day"
 NOTIFYBLOCKEDNUMBERDESC="How often to notify about a blocked IP during one day"
 DELAYDURATIONLABEL="Delay"
 DELAYDURATIONDESC="Delay (in seconds) on a failed login attempt"
-NOTIFY_NEVER="Never notify"
-NOTIFY_FRONTEND="Only Frontend"
-NOTIFY_BACKEND="Only Backend"
-NOTIFY_BOTH="Both"
 BLOCKNUMBERLABEL="Block threshold"
 BLOCKNUMBERDESC="How often a login can be tried in the given interval (see block interval) until the IP will be blocked"
 BLOCKINTERVALLABEL="Block interval"
 BLOCKINTERVALDESC="What interval (in hours) to consider for blocking an IP address (note that this blocking is permanent at the moment)"
 ENABLED="enabled"
 DISABLED="disabled"
-UNLIMITED="unlimited"
+NOTIFY_UNLIMITED="unlimited"
+NOTIFY_NEVER="never"
 BLOCKEDMESSAGELABEL="Blocked message"
 BLOCKEDMESSAGEDESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts"
